--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "author": "kenechukwu okoh",
   "license": "ISC",
+  "engines": {
+    "node": "v16.16.0"
+  },
   "bugs": {
     "url": "https://github.com/kennygodin/amazona_/issues"
   },
